--- a/02-Angular-Intro/03-SalaryCalculator-Scope-ViewFunctions.html
+++ b/02-Angular-Intro/03-SalaryCalculator-Scope-ViewFunctions.html
@@ -45,66 +45,101 @@
 			window.scope = $rootScope;
 		});
 
+
+
 		//View
+		function bindTwoWay($element, model){
+			$element.change(function(){
+				scope.$apply(function(){
+					var expr = model + ' = ' + $element.val().toInt();
+					scope.$eval(expr);
+				})
+			});
+			scope.$watch(model, function(newValue, oldValue){
+				$element.val(newValue);
+			});
+		}
+
+		function bindClick($element, expr){
+			$element.click(function(){
+				scope.$apply(function(){
+					scope.$eval(expr);
+				})
+			});
+		}
+
+		function bindOneWay($element, model){
+			scope.$watch(model, function(newValue, oldValue){
+				$element.html(newValue);
+			});
+		}
+
 		$(document).ready(function(){
 
 			window.calculator = scope.calculator = new SalaryCalculator();
 
 			//Reacts to user actions
-			$("#txtBasic").change(function(){
-				scope.$apply(function(){
-					calculator.basic = $('#txtBasic').val().toInt();
-				})
-			});
+			
+			bindTwoWay($("#txtBasic"), 'calculator.basic')
 
-			$("#txtHra").change(function(){
+			
+
+			/*$("#txtHra").change(function(){
 				scope.$apply(function(){
 					calculator.hra = $('#txtHra').val().toInt();
 				})
 			});
+			scope.$watch('calculator.hra', function(newValue, oldValue){
+				$('#txtHra').val(newValue);
+			});*/
 
-			$("#txtDa").change(function(){
+			bindTwoWay($("#txtHra"), "calculator.hra");
+
+
+
+			/*$("#txtDa").change(function(){
 				scope.$apply(function(){
 					calculator.da = $('#txtDa').val().toInt();
 				})
 			});
 
-			$("#rangeTax").change(function(){
+			scope.$watch('calculator.da', function(newValue, oldValue){
+				$('#txtDa').val(newValue);
+			});*/
+			bindTwoWay($("#txtDa"), "calculator.da");
+
+			
+			/*$("#rangeTax").change(function(){
 				scope.$apply(function(){
 					calculator.tax = $('#rangeTax').val().toInt();
 				})
 			});
+			scope.$watch('calculator.tax', function(newValue, oldValue){
+				$('#rangeTax').val(newValue);
+			});*/
 
-			$('#btnCalculate').click(function(){
+			bindTwoWay($("#rangeTax"), "calculator.tax");
+
+
+			/*$('#btnCalculate').click(function(){
 				scope.$apply(function(){
 					calculator.calculate();
 				})
-			});
+			});*/
 
+			bindClick($("#btnCalculate"), "calculator.calculate()")
 			
 			//Reacts to model changes
-			scope.$watch('calculator.salary', function(newValue, oldValue){
+			/*scope.$watch('calculator.salary', function(newValue, oldValue){
 				$('#divResult').html(newValue);
-			});
+			});*/
+			bindOneWay($("#divResult"), "calculator.salary");
 
-			scope.$watch('calculator.basic', function(newValue, oldValue){
-				$('#txtBasic').val(newValue);
-			});
 
-			scope.$watch('calculator.hra', function(newValue, oldValue){
-				$('#txtHra').val(newValue);
-			});
-
-			scope.$watch('calculator.da', function(newValue, oldValue){
-				$('#txtDa').val(newValue);
-			});
-
-			scope.$watch('calculator.tax', function(newValue, oldValue){
-				$('#rangeTax').val(newValue);
-			});
-			scope.$watch('calculator.tax', function(newValue, oldValue){
+			/*scope.$watch('calculator.tax', function(newValue, oldValue){
 				$('#spanTax').html(newValue);
-			});
+			});*/
+			bindOneWay($("#spanTax"), "calculator.tax");
 		});
 		
 	</script>
