--- a/02-Angular-Intro/08-MathCalculator-Assignment.html
+++ b/02-Angular-Intro/08-MathCalculator-Assignment.html
@@ -8,12 +8,23 @@
 	<h1>Math Calculator</h1>
 	<hr>
 	<div class="content">
-		<input type="number" name="" id="">
+		<!-- <input type="number" name="" id="">
 		<input type="number" name="" id="">
 		<input type="button" value="Add">
 		<input type="button" value="Subtract">
 		<input type="button" value="Multiply">
 		<input type="button" value="Divide">
+		<div id="divResult">[Result]</div> -->
+
+		<input type="number">
+		<select>
+			<option value="add">Add</option>
+			<option value="subtract">Subtract</option>
+			<option value="multiply">Multiply</option>
+			<option value="divide">Divide</option>
+		</select>
+		<input type="number">
+		<input type="button" value="Calculate">
 		<div id="divResult">[Result]</div>
 	</div>
 </body>
