--- a/03-BugTracker/index.html
+++ b/03-BugTracker/index.html
@@ -45,8 +45,8 @@
 		(done) 3. Toggle the closed status of a bug
 		(done) 4. Remove closed bugs
 		(done) 5. Display statistics (# of closed bugs / total # of bugs)
-		6. Search for bugs
-		7. Sort the bugs
+		(done) 6. Search for bugs
+		(done) 7. Sort the bugs
 		8. Improvise the bug display
 		9. Persist the bugs in the localStorage
 		10. Display 'createdAt'
@@ -57,20 +57,40 @@
 	<script>
 		var bugTrackerApp = angular.module("bugTrackerApp", []);
 
-		bugTrackerApp.value('bugOperations' , {
-			createNew : function(newBugName){
-				return {
-					name : newBugName,
-					isClosed : false
-				};
-			},
-			toggle : function(bug){
-				bug.isClosed = !bug.isClosed;
-			}
+		bugTrackerApp.value('defaultBugName', '[Default Bug]');
+
+		
+
+		bugTrackerApp.factory('bugOperations' , function (defaultBugName){
+			
+			var counter = 0;
+			return {
+				createNew : function(newBugName){
+					return {
+						id : ++counter,
+						name : newBugName || defaultBugName,
+						isClosed : false
+					};
+				},
+				toggle : function(bug){
+					bug.isClosed = !bug.isClosed;
+				}
+			};
 		});
 
 		bugTrackerApp.controller("bugsController", function($scope, bugOperations){
-			$scope.bugs = [];
+			
+			function getDefaultBugs(){
+				return [
+					bugOperations.createNew('User actions not recognized'),
+					bugOperations.createNew('Data validation error'),
+					bugOperations.createNew('Server communication failure'),
+					bugOperations.createNew('Application not responsive')
+				];
+			}
+
+			$scope.bugs = getDefaultBugs();
+
 			$scope.addNew = function(newBugName){
 				var newBug = bugOperations.createNew(newBugName);
 				$scope.bugs.push(newBug);
@@ -101,6 +121,7 @@
 </head>
 <body ng-app="bugTrackerApp">
 	<h1>Bug Tracker</h1>
+	<input type="text"  ng-model="emp.name">
 	<hr>
 	<div class="content" ng-controller="bugsController">
 		<section class="stats">
@@ -110,18 +131,20 @@
 		</section>
 		<section class="search">
 			<label for="">Search :</label>
-			<input type="text">
+			<input type="text" ng-model="searchBug.name">
 			<label for="">Closed ? :</label>
-			<input type="checkbox">
+			<input type="checkbox" ng-model="searchBug.isClosed">
+			<input type="button" value="Show All" ng-click="searchBug=undefined" ng-show="searchBug">
 		</section>
 		<section class="sort">
 			<label for="">Order By :</label>
-			<select>
-				<option value="">Name</option>
-				<option value="">Status</option>
+			<select ng-model="sortBugBy">
+				<option value="id">Id</option>
+				<option value="name">Name</option>
+				<option value="isClosed">Status</option>
 			</select>
 			<label for="">Descending ? :</label>
-			<input type="checkbox"></select>
+			<input type="checkbox" ng-model="sortBugDescending"></select>
 		</section>
 		<section class="edit">
 			<label for="">Bug Name :</label>
@@ -131,10 +154,11 @@
 		</section>
 		<section class="list">
 			<ol>
-				<li ng-repeat="bug in bugs track by $index">
+				<li ng-repeat="bug in ( bugs | filter:searchBug | orderBy:sortBugBy:sortBugDescending ) ">
 					<span class="bugname" ng-click="toggle(bug)" ng-class="{closed : bug.isClosed}">
 						{{bug.name}}
 					</span>
+					<span>[{{bug.id}}]</span>
 					<div class="datetime">[Created At]</div>
 				</li>
 				
